--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ p.siteSub {
 	font-size: 92%;
 }
 body {
-	background: url(assets/img/part/body-top.png) repeat-x top left #f6f6f6;
+	background: url(/assets/img/part/body-top.png) repeat-x top left #f6f6f6;
 }
 ul {
 	list-style-type: none;
@@ -406,7 +406,7 @@ div.articleLeftInner {
 }
 .tabs ul li a {
 	display: block;
-	background: url(assets/img/part/blue-gradient.png) bottom left repeat-x transparent;
+	background: url(/assets/img/part/blue-gradient.png) bottom left repeat-x transparent;
 	font-size: 0.85em;
 	padding: 1em 0.5em 0;
 	line-height: 2em;
@@ -421,7 +421,7 @@ div.articleLeftInner {
 }
 .tabs ul {
 	display: inline-block;
-	background: url(assets/img/part/tab-separator.png) repeat-x top left transparent;
+	background: url(/assets/img/part/tab-separator.png) repeat-x top left transparent;
 	letter-spacing: 0;
 	margin: 0;
 	padding: 0 1px 0 0;
@@ -463,7 +463,7 @@ div.articleLeftInner {
 	font-size: 0.8em;
 }
 #submitSearch {
-	background-image: url(assets/img/part/search.png);
+	background-image: url(/assets/img/part/search.png);
 	display: inline-block;
 	background-position: center center;
 	background-repeat: no-repeat;
@@ -491,7 +491,7 @@ div.articleLeftInner {
 span.user {
 	background-position: left top;
 	background-repeat: no-repeat;
-	background-image: url(assets/img/part/user-ico.png);
+	background-image: url(/assets/img/part/user-ico.png);
 	padding-left: 15px !important;
 }
 .contentsPanel {
